# MaterialScanner

./: .gitignore  CMakeLists.txt  ChangeLog.md  README.md  Readme.txt  Timeline.md  example.py  main.py  package.cmd  package.py  requirements.txt  run.cmd  stereo_main.py
UltimateCommon/: CMakeLists.txt  CameraProperty.cpp  CameraProperty.h  CommandTaskThread.h  Common.cpp  Common.h  ICameraHolder.cpp  ICameraHolder.h  Signal.h  Singleton.h  Thread.cpp  Thread.h  UltimateCommon_global.h  Util.h
UltimateController/: CameraConfig.cpp  CameraConfig.h  CameraController.cpp  CameraController.h  CameraHolderFuji.cpp  CameraHolderFuji.h  CameraHolderSony.cpp  CameraHolderSony.h  CameraTextFormat.cpp  CameraTextFormat.h  ConnectionInfo.cpp  ConnectionInfo.h  FujiCommon.cpp  FujiCommon.h  FujiSDK.cpp  FujiSDK.h  LiveViewThread.cpp  LiveViewThread.h  MessageDefine.cpp  MessageDefine.h  ScanCameraThread.cpp  ScanCameraThread.h  SonyCommon.cpp  SonyCommon.h  Text.cpp  Text.h
UltimateMaterialScanner/: CMakeLists.txt  UltimateMaterialScanner_zh_CN.ts  main.cpp  qml.qrc  resource.h  resource.qrc  resource.rc
UltimateMaterialScanner/Controll/: CameraOperation.cpp  CameraOperation.h  CameraRenderItem.cpp  CameraRenderItem.h  ControlProtocol.cpp  ControlProtocol.h  DeviceControl.cpp  DeviceControl.h  ImageAnalysis.cpp  ImageAnalysis.h  ImageCheckThread.cpp  ImageCheckThread.h  MainControl.cpp  MainControl.h  PowerControl.cpp  PowerControl.h  ScanFileParsing.cpp  ScanFileParsing.h  SoftConfig.cpp  SoftConfig.h
UltimateMaterialScanner/qml/: CameraIntPropertyEditItem.qml  CameraLiveView.qml  CameraPropertyEditItem.qml  CameraSettingsItem.qml  LightButton.qml  LightControlItem.qml  PopupAnimation.qml  ScanResolutionList.qml  SettingItem.qml  StyleConfig.qml  main.qml
UltimateMaterialScanner/qml/Base/: DBusyIndicator.qml  DButton.qml  DCheckBox.qml  DComboBox.qml  DDoubleSpinBox.qml  DMessageBox.qml  DRadioButton.qml  DSlider.qml  DSpinBox.qml  DSwitch.qml  DTextInput.qml  TitleItem.qml
base/: common.py  common_image.py  common_isp.py  config_handler.py
conf/: cam_120.json  fuji_120.json  fuji_50.json  settings.json
config/: 120_stereo.json
ext/semi/: semi_calib_shadow_zmq.py
ext/semi/data/: config_120_mid.json
func/: addon_colour_correction.py  addon_segmentation.py  calib_grayboard.py  calib_marker.py  texture_albedo.py  texture_ao.py  texture_height.py  texture_height_mvs.py  texture_normal.py  texture_roughness.py  texture_sss.py
include/: CalibProcess.h  ChessboradStruct.h  CornerDetAC.h  HeaderCB.h  corealgmatlab.h
process/: mono.py  stereo.py
scripts/: check_env.py  compile.py  generate_cc_swatch.py  post_package.py  run.cmd  sort_images.py
src/: CalibProcess.cpp  ChessboradStruct.cpp  CornerDetAC.cpp  corealgmatlab.cpp  main.cpp
